iris data load test

--- a/lof-tutorial.ipynb
+++ b/lof-tutorial.ipynb
@@ -46,6 +46,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['setosa', 'versicolor', 'virginica']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "data = load_iris()\n",
+    "data.target[[10, 25, 50]]\n",
+    "\n",
+    "list(data.target_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
